# doc_data_extraction

./: README.md  config.py  pyproject.toml  streamlit_UI.py
services/: __init__.py  llm_service.py  pdf_reader_service.py  text_extraction_service.py
